Update today studying

--- a/contents/2019.08/08.md
+++ b/contents/2019.08/08.md
@@ -147,7 +147,7 @@
 
 <br/>
 
-## 08.
+## 08.12
 
 ### 공부, 정리할 것
 * [Code Review](/contents/BasicEducation/CodeReview.md)
@@ -165,7 +165,25 @@
 
 <br/>
 
-## 08.
+## 08.13
+
+### 공부, 정리할 것
+* [Code Review](/contents/BasicEducation/CodeReview.md)
+* [Clean Code](/contents/BasicEducation/CleanCode.md)
+
+### Main
+* [기반] Phase, Alice UI, DB, Select
+
+### phase history
+### opensource queryparse
+
+
+
+
+
+<br/>
+
+## 08.14
 
 ### 공부, 정리할 것
 * [Code Review](/contents/BasicEducation/CodeReview.md)
