Update today studying

--- a/contents/2019.08/08.md
+++ b/contents/2019.08/08.md
@@ -265,7 +265,7 @@
 * [기반] Phase, Alice UI, DB, Select
 
 ### Phase 자료 정리
-### MIDAS Transaction
+### MIDAS Transaction 분석
 ### opensource queryparse
 
 
@@ -284,7 +284,7 @@
 * [기반] Phase, Alice UI, DB, Select
 
 ### Phase 자료 정리
-### MIDAS Transaction
+### MIDAS Transaction 분석
 ### opensource queryparse
 
 
@@ -303,7 +303,7 @@
 * [기반] Phase, Alice UI, DB, Select
 
 ### Phase 자료 정리
-### MIDAS Transaction
+### MIDAS Transaction 분석
 ### opensource queryparse
 
 
@@ -322,7 +322,7 @@
 * [기반] Phase, Alice UI, DB, Select
 
 ### Phase 자료 정리
-### MIDAS Transaction
+### MIDAS Transaction 분석
 ### opensource queryparse
 
 
@@ -341,5 +341,24 @@
 * [기반] Phase, Alice UI, DB, Select
 
 ### Phase 자료 정리
-### MIDAS Transaction
+### MIDAS Transaction 분석
+### opensource queryparse
+
+
+
+
+
+<br/>
+
+## 08.29
+
+### 공부, 정리할 것
+* [Code Review](/contents/BasicEducation/CodeReview.md)
+* [Clean Code](/contents/BasicEducation/CleanCode.md)
+
+### Main
+* [기반] Phase, Alice UI, DB, Select
+
+### Phase 자료 정리
+### Core Transaction System 구축
 ### opensource queryparse
