--- a/contents/2019.08/08.md
+++ b/contents/2019.08/08.md
@@ -362,3 +362,22 @@
 ### Phase 자료 정리
 ### Core Transaction System 구축
 ### opensource queryparse
+
+
+
+
+
+<br/>
+
+## 08.30
+
+### 공부, 정리할 것
+* [Code Review](/contents/BasicEducation/CodeReview.md)
+* [Clean Code](/contents/BasicEducation/CleanCode.md)
+
+### Main
+* [기반] Phase, Alice UI, DB, Select
+
+### Phase 자료 정리
+### Core Transaction System 구축
+### opensource queryparse
