--- a/contents/2019.09/09.md
+++ b/contents/2019.09/09.md
@@ -9,7 +9,24 @@
 
 <br/>
 
-## 08.01
+## 09.01
+
+### 공부, 정리할 것
+* [Code Review](/contents/BasicEducation/CodeReview.md)
+* [Clean Code](/contents/BasicEducation/CleanCode.md)
+
+### Main
+* [기반] Phase, Alice UI, DB, Select
+
+### Phase 자료 정리
+### Core History
+### opensource queryparse
+
+
+
+<br/>
+
+## 09.02
 
 ### 공부, 정리할 것
 * [Code Review](/contents/BasicEducation/CodeReview.md)
