--- a/contents/2019.09/09.md
+++ b/contents/2019.09/09.md
@@ -57,3 +57,21 @@
 ### Phase 자료 정리
 ### Core History
 ### opensource queryparse
+
+
+
+
+<br/>
+
+## 09.06
+
+### 공부, 정리할 것
+* [Code Review](/contents/BasicEducation/CodeReview.md)
+* [Clean Code](/contents/BasicEducation/CleanCode.md)
+
+### Main
+* [기반] Phase, Alice UI, DB, Select
+
+### Phase 자료 정리
+### Core History
+### opensource queryparse
