Update today studying

--- a/contents/2019.09/09.md
+++ b/contents/2019.09/09.md
@@ -90,6 +90,25 @@
 ### Main
 * [기반] Phase, Alice UI, DB, Select
 
+### LabelPhase 개선
+### Phase 자료 정리
+### Core History
+### opensource queryparse
+
+
+
+
+<br/>
+
+## 09.09
+
+### 공부, 정리할 것
+* [Code Review](/contents/BasicEducation/CodeReview.md)
+* [Clean Code](/contents/BasicEducation/CleanCode.md)
+
+### Main
+* [기반] Phase, Alice UI, DB, Select
+
 ### CI 공부
 ### Phase 자료 정리
 ### Core History
