--- a/contents/2019.09/09.md
+++ b/contents/2019.09/09.md
@@ -100,7 +100,7 @@
 
 <br/>
 
-## 09.09
+## 09.10
 
 ### 공부, 정리할 것
 * [Code Review](/contents/BasicEducation/CodeReview.md)
@@ -113,3 +113,24 @@
 ### Phase 자료 정리
 ### Core History
 ### opensource queryparse
+
+
+
+
+<br/>
+
+## 09.11
+
+### 공부, 정리할 것
+* [Code Review](/contents/BasicEducation/CodeReview.md)
+* [Clean Code](/contents/BasicEducation/CleanCode.md)
+* Phase 자료 정리
+* Core History
+* opensource queryparse
+
+### Main
+* [기반] Phase, Alice UI, DB, Select
+
+### CI 공부
+### LabelPhase 개선
+
