--- a/contents/2019.09/09.md
+++ b/contents/2019.09/09.md
@@ -134,3 +134,24 @@
 ### CI 공부
 ### LabelPhase 개선
 
+
+
+
+
+<br/>
+
+## 09.16
+
+### 공부, 정리할 것
+* [Code Review](/contents/BasicEducation/CodeReview.md)
+* [Clean Code](/contents/BasicEducation/CleanCode.md)
+* Phase 자료 정리
+* Core History
+* opensource queryparse
+
+### Main
+* [기반] Phase, Alice UI, DB, Select
+
+### CI 공부
+### LabelPhase 개선
+
