--- a/contents/2019.09/09.md
+++ b/contents/2019.09/09.md
@@ -187,7 +187,31 @@
 
 <br/>
 
-## 09.16
+## 09.18
+
+### 공부, 정리할 것
+* [Code Review](/contents/BasicEducation/CodeReview.md)
+* [Clean Code](/contents/BasicEducation/CleanCode.md)
+* Phase 자료 정리
+* Core History
+* opensource queryparse
+* CI 공부
+
+### Main
+* [기반] Phase, Alice UI, DB, Select
+
+### Core DB Reflection 개선
+### LabelPhase 개선
+
+
+
+
+
+
+
+<br/>
+
+## 09.19
 
 ### 공부, 정리할 것
 * [Code Review](/contents/BasicEducation/CodeReview.md)
