--- a/contents/2019.09/09.md
+++ b/contents/2019.09/09.md
@@ -376,3 +376,27 @@
 
 ### LabelPhase System 개선
 ### Core DB Reflection 개선
+
+
+
+
+
+
+
+
+<br/>
+
+## 09.28
+
+### 공부, 정리할 것
+* [Code Review](/contents/BasicEducation/CodeReview.md)
+* [Clean Code](/contents/BasicEducation/CleanCode.md)
+* Phase 자료 정리
+* Core History
+* opensource queryparse
+* CI 공부
+
+### Main
+* [기반] Phase, Alice UI, DB, Select
+
+### 행복 마라톤
