Update today studying

--- a/contents/2019.09/09.md
+++ b/contents/2019.09/09.md
@@ -363,7 +363,7 @@
 
 ## 09.26
 
-### 공부, 정리할 것
+### 공부, 정리할 것]
 * [Code Review](/contents/BasicEducation/CodeReview.md)
 * [Clean Code](/contents/BasicEducation/CleanCode.md)
 * Phase 자료 정리
@@ -400,3 +400,29 @@
 * [기반] Phase, Alice UI, DB, Select
 
 ### 행복 마라톤
+
+
+
+
+
+
+
+
+<br/>
+
+## 09.30
+
+### 공부, 정리할 것
+* [Code Review](/contents/BasicEducation/CodeReview.md)
+* [Clean Code](/contents/BasicEducation/CleanCode.md)
+* Phase 자료 정리
+* Core History
+* opensource queryparse
+* CI 공부
+
+### Main
+* [기반] Phase, Alice UI, DB, Select
+
+### LabelPhase Deep Copy Function 구현
+### Core DB Reflection 개선
+
