--- a/contents/2019.09/09.md
+++ b/contents/2019.09/09.md
@@ -9,7 +9,138 @@
 
 <br/>
 
-## 10.01
+## 09.01
+
+### 공부, 정리할 것
+* [Code Review](/contents/BasicEducation/CodeReview.md)
+* [Clean Code](/contents/BasicEducation/CleanCode.md)
+
+### Main
+* [기반] Phase, Alice UI, DB, Select
+
+### Phase 자료 정리
+### Core History
+### opensource queryparse
+
+
+
+<br/>
+
+## 09.02
+
+### 공부, 정리할 것
+* [Code Review](/contents/BasicEducation/CodeReview.md)
+* [Clean Code](/contents/BasicEducation/CleanCode.md)
+
+### Main
+* [기반] Phase, Alice UI, DB, Select
+
+### Phase 자료 정리
+### Core History
+### opensource queryparse
+
+
+
+
+<br/>
+
+## 09.05
+
+### 공부, 정리할 것
+* [Code Review](/contents/BasicEducation/CodeReview.md)
+* [Clean Code](/contents/BasicEducation/CleanCode.md)
+
+### Main
+* [기반] Phase, Alice UI, DB, Select
+
+### gtest 모듈 리팩토링
+### Phase 자료 정리
+### Core History
+### opensource queryparse
+
+
+
+
+<br/>
+
+## 09.06
+
+### 공부, 정리할 것
+* [Code Review](/contents/BasicEducation/CodeReview.md)
+* [Clean Code](/contents/BasicEducation/CleanCode.md)
+
+### Main
+* [기반] Phase, Alice UI, DB, Select
+
+### Phase 자료 정리
+### Core History
+### opensource queryparse
+
+
+
+
+<br/>
+
+## 09.09
+
+### 공부, 정리할 것
+* [Code Review](/contents/BasicEducation/CodeReview.md)
+* [Clean Code](/contents/BasicEducation/CleanCode.md)
+
+### Main
+* [기반] Phase, Alice UI, DB, Select
+
+### LabelPhase 개선
+### Phase 자료 정리
+### Core History
+### opensource queryparse
+
+
+
+
+<br/>
+
+## 09.10
+
+### 공부, 정리할 것
+* [Code Review](/contents/BasicEducation/CodeReview.md)
+* [Clean Code](/contents/BasicEducation/CleanCode.md)
+
+### Main
+* [기반] Phase, Alice UI, DB, Select
+
+### CI 공부
+### Phase 자료 정리
+### Core History
+### opensource queryparse
+
+
+
+
+<br/>
+
+## 09.11
+
+### 공부, 정리할 것
+* [Code Review](/contents/BasicEducation/CodeReview.md)
+* [Clean Code](/contents/BasicEducation/CleanCode.md)
+* Phase 자료 정리
+* Core History
+* opensource queryparse
+
+### Main
+* [기반] Phase, Alice UI, DB, Select
+
+### CI 공부
+### LabelPhase 개선
+
+
+
+
+
+<br/>
+
+## 09.16
 
 ### 공부, 정리할 것
 * [Code Review](/contents/BasicEducation/CodeReview.md)
@@ -22,7 +153,276 @@
 ### Main
 * [기반] Phase, Alice UI, DB, Select
 
-### LabelPhase Async Callback 방식 구현
+### Core DB Reflection 개선
+### LabelPhase 개선
+
+
+
+
+
+
+<br/>
+
+## 09.16
+
+### 공부, 정리할 것
+* [Code Review](/contents/BasicEducation/CodeReview.md)
+* [Clean Code](/contents/BasicEducation/CleanCode.md)
+* Phase 자료 정리
+* Core History
+* opensource queryparse
+* CI 공부
+
+### Main
+* [기반] Phase, Alice UI, DB, Select
+
+### Core DB Reflection 개선
+### LabelPhase 개선
+
+
+
+
+
+
+
+<br/>
+
+## 09.18
+
+### 공부, 정리할 것
+* [Code Review](/contents/BasicEducation/CodeReview.md)
+* [Clean Code](/contents/BasicEducation/CleanCode.md)
+* Phase 자료 정리
+* Core History
+* opensource queryparse
+* CI 공부
+
+### Main
+* [기반] Phase, Alice UI, DB, Select
+
+### Core DB Reflection 개선
+### LabelPhase 개선
+
+
+
+
+
+
+
+<br/>
+
+## 09.19
+
+### 공부, 정리할 것
+* [Code Review](/contents/BasicEducation/CodeReview.md)
+* [Clean Code](/contents/BasicEducation/CleanCode.md)
+* Phase 자료 정리
+* Core History
+* opensource queryparse
+* CI 공부
+
+### Main
+* [기반] Phase, Alice UI, DB, Select
+
+### Core DB Reflection 개선
+### LabelPhase 개선
+
+
+
+
+
+
+
+<br/>
+
+## 09.20
+
+### 공부, 정리할 것
+* [Code Review](/contents/BasicEducation/CodeReview.md)
+* [Clean Code](/contents/BasicEducation/CleanCode.md)
+* Phase 자료 정리
+* Core History
+* opensource queryparse
+* CI 공부
+
+### Main
+* [기반] Phase, Alice UI, DB, Select
+
+### Core DB Reflection 개선
+### LabelPhase 개선
+
+
+
+
+
+
+
+
+<br/>
+
+## 09.23
+
+### 공부, 정리할 것
+* [Code Review](/contents/BasicEducation/CodeReview.md)
+* [Clean Code](/contents/BasicEducation/CleanCode.md)
+* Phase 자료 정리
+* Core History
+* opensource queryparse
+* CI 공부
+
+### Main
+* [기반] Phase, Alice UI, DB, Select
+
+### Core DB Reflection 개선
+### LabelPhase 개선
+
+
+
+
+
+
+
+
+<br/>
+
+## 09.24
+
+### 공부, 정리할 것
+* [Code Review](/contents/BasicEducation/CodeReview.md)
+* [Clean Code](/contents/BasicEducation/CleanCode.md)
+* Phase 자료 정리
+* Core History
+* opensource queryparse
+* CI 공부
+
+### Main
+* [기반] Phase, Alice UI, DB, Select
+
+### Core DB Reflection 개선
+### LabelPhase 개선
+
+
+
+
+
+
+
+
+<br/>
+
+## 09.25
+
+### 공부, 정리할 것
+* [Code Review](/contents/BasicEducation/CodeReview.md)
+* [Clean Code](/contents/BasicEducation/CleanCode.md)
+* Phase 자료 정리
+* Core History
+* opensource queryparse
+* CI 공부
+
+### Main
+* [기반] Phase, Alice UI, DB, Select
+
+### Core Lib Windows Memory Validator
+### Core DB Reflection 개선
+### LabelPhase 개선
+
+
+
+
+
+
+
+
+<br/>
+
+## 09.26
+
+### 공부, 정리할 것
+* [Code Review](/contents/BasicEducation/CodeReview.md)
+* [Clean Code](/contents/BasicEducation/CleanCode.md)
+* Phase 자료 정리
+* Core History
+* opensource queryparse
+* CI 공부
+
+### Main
+* [기반] Phase, Alice UI, DB, Select
+
+### LabelPhase System 개선
+### Core DB Reflection 개선
+
+
+
+
+
+
+
+
+<br/>
+
+## 09.26
+
+### 공부, 정리할 것]
+* [Code Review](/contents/BasicEducation/CodeReview.md)
+* [Clean Code](/contents/BasicEducation/CleanCode.md)
+* Phase 자료 정리
+* Core History
+* opensource queryparse
+* CI 공부
+
+### Main
+* [기반] Phase, Alice UI, DB, Select
+
+### LabelPhase System 개선
+### Core DB Reflection 개선
+
+
+
+
+
+
+
+
+<br/>
+
+## 09.28
+
+### 공부, 정리할 것
+* [Code Review](/contents/BasicEducation/CodeReview.md)
+* [Clean Code](/contents/BasicEducation/CleanCode.md)
+* Phase 자료 정리
+* Core History
+* opensource queryparse
+* CI 공부
+
+### Main
+* [기반] Phase, Alice UI, DB, Select
+
+### 행복 마라톤
+
+
+
+
+
+
+
+
+<br/>
+
+## 09.30
+
+### 공부, 정리할 것
+* [Code Review](/contents/BasicEducation/CodeReview.md)
+* [Clean Code](/contents/BasicEducation/CleanCode.md)
+* Phase 자료 정리
+* Core History
+* opensource queryparse
+* CI 공부
+
+### Main
+* [기반] Phase, Alice UI, DB, Select
+
 ### LabelPhase Deep Copy Function 구현
 ### Core DB Reflection 개선
 
