--- a/contents/2019.10/10.md
+++ b/contents/2019.10/10.md
@@ -119,3 +119,28 @@
 ### LabelPhase Deep Copy Function 구현
 ### Core DB Reflection 개선
 
+
+
+
+
+
+
+<br/>
+
+## 10.09
+
+### 공부, 정리할 것
+* [Code Review](/contents/BasicEducation/CodeReview.md)
+* [Clean Code](/contents/BasicEducation/CleanCode.md)
+* Phase 자료 정리
+* Core History
+* opensource queryparse
+* CI 공부
+
+### Main
+* [기반] Phase, Alice UI, DB, Select
+
+### LabelPhase 리팩토링
+### LabelPhase Deep Copy Function 구현
+### Core DB Reflection 개선
+
