--- a/contents/2019.10/10.md
+++ b/contents/2019.10/10.md
@@ -205,7 +205,33 @@
 
 <br/>
 
-## 10.11
+## 10.14
+
+### 공부, 정리할 것
+* [Code Review](/contents/BasicEducation/CodeReview.md)
+* [Clean Code](/contents/BasicEducation/CleanCode.md)
+* Phase 자료 정리
+* Core History
+* opensource queryparse
+* CI 공부
+
+### Main
+* [기반] Phase, Alice UI, DB, Select
+
+### Release DB 전체 UI 명칭 개선
+### LabelPhase 리팩토링
+### LabelPhase Deep Copy Function 구현
+
+
+
+
+
+
+
+
+<br/>
+
+## 10.16
 
 ### 공부, 정리할 것
 * [Code Review](/contents/BasicEducation/CodeReview.md)
