--- a/contents/2019.10/10.md
+++ b/contents/2019.10/10.md
@@ -333,13 +333,33 @@
 
 
 
+<br/>
+
+## 10.23
+
+### 공부, 정리할 것
+* [Code Review](/contents/BasicEducation/CodeReview.md)
+* [Clean Code](/contents/BasicEducation/CleanCode.md)
+* Phase 자료 정리
+* Core History
+* opensource queryparse
+* CI 공부
+
+### Main
+* [기반] Phase, Alice UI, DB, Select
+
+### Release DB 전체 UI 명칭 개선
+### 출시까지 검증
+
+
+
 
 
 
 
 <br/>
 
-## 10.23
+## 10.24
 
 ### 공부, 정리할 것
 * [Code Review](/contents/BasicEducation/CodeReview.md)
