--- a/contents/2019.10/10.md
+++ b/contents/2019.10/10.md
@@ -385,7 +385,7 @@
 <br/>
 
 ## 10.25
-ㅕ
+
 ### 공부, 정리할 것
 * [Code Review](/contents/BasicEducation/CodeReview.md)
 * [Clean Code](/contents/BasicEducation/CleanCode.md)
@@ -398,5 +398,30 @@
 * [기반] Phase, Alice UI, DB, Select
 
 ### Release DB 전체 UI 명칭 개선
+### 출시까지 검증
+
+
+
+
+
+
+
+
+
+<br/>
+
+## 10.28
+
+### 공부, 정리할 것
+* [Code Review](/contents/BasicEducation/CodeReview.md)
+* [Clean Code](/contents/BasicEducation/CleanCode.md)
+* Phase 자료 정리
+* Core History
+* opensource queryparse
+* CI 공부
+
+### Main
+* [기반] Phase, Alice UI, DB, Select
+
 ### 출시까지 검증
 
