--- a/contents/2019.10/10.md
+++ b/contents/2019.10/10.md
@@ -451,3 +451,30 @@
 
 ### 출시까지 검증
 
+
+
+
+
+
+
+
+
+
+<br/>
+
+## 10.30
+
+### 공부, 정리할 것
+* [Code Review](/contents/BasicEducation/CodeReview.md)
+* [Clean Code](/contents/BasicEducation/CleanCode.md)
+* Phase 자료 정리
+* Core History
+* opensource queryparse
+* CI 공부
+
+### Main
+* [기반] Phase, Alice UI, DB, Select
+
+### 베타 출시!!!
+### 인스톨 묶기
+
