--- a/contents/2019.10/10.md
+++ b/contents/2019.10/10.md
@@ -478,3 +478,28 @@
 ### 베타 출시!!!
 ### 인스톨 묶기
 
+
+
+
+
+
+
+
+
+
+<br/>
+
+## 10.31
+
+### 공부, 정리할 것
+* [Code Review](/contents/BasicEducation/CodeReview.md)
+* [Clean Code](/contents/BasicEducation/CleanCode.md)
+* Phase 자료 정리
+* Core History
+* opensource queryparse
+* CI 공부
+
+### Main
+* [기반] Phase, Alice UI, DB, Select
+
+### 드디어 출시... 출시하느라 밀렸던 문서들 작성하고, 출시하면서 겪었던 인스톨관련 문제점들 개선하기
