Update today studying

--- a/contents/2019.11/11.md
+++ b/contents/2019.11/11.md
@@ -44,3 +44,24 @@
 
 ### 드디어 출시... 출시하느라 밀렸던 문서들 작성하고, 출시하면서 겪었던 인스톨관련 문제점들 개선하기
 
+
+
+
+
+<br/>
+
+## 11.05
+
+### 공부, 정리할 것
+* [Code Review](/contents/BasicEducation/CodeReview.md)
+* [Clean Code](/contents/BasicEducation/CleanCode.md)
+* Phase 자료 정리
+* Core History
+* opensource queryparse
+* CI 공부
+
+### Main
+* [기반] Phase, Alice UI, DB, Select
+
+### 문서 작성
+
