--- a/contents/2019.11/11.md
+++ b/contents/2019.11/11.md
@@ -110,3 +110,47 @@
 
 ### 문서 작성
 ### 자잘한 UI들 개선
+
+
+
+
+
+<br/>
+
+## 11.07
+
+### 공부, 정리할 것
+* [Code Review](/contents/BasicEducation/CodeReview.md)
+* [Clean Code](/contents/BasicEducation/CleanCode.md)
+* Phase 자료 정리
+* Core History
+* opensource queryparse
+* CI 공부
+
+### Main
+* [기반] Phase, Alice UI, DB, Select
+
+### 문서 작성
+### 자잘한 UI들 개선
+
+
+
+
+
+<br/>
+
+## 11.08
+
+### 공부, 정리할 것
+* [Code Review](/contents/BasicEducation/CodeReview.md)
+* [Clean Code](/contents/BasicEducation/CleanCode.md)
+* Phase 자료 정리
+* Core History
+* opensource queryparse
+* CI 공부
+
+### Main
+* [기반] Phase, Alice UI, DB, Select
+
+### 문서 작성
+### 자잘한 UI들 개선
