Update today studying

--- a/contents/2019.11/11.md
+++ b/contents/2019.11/11.md
@@ -200,3 +200,58 @@
 ### 신입사원 교육
 ### 문서 작성
 ### 자잘한 UI들 개선
+
+
+
+
+
+<br/>
+
+## 11.13
+
+### 공부, 정리할 것
+* [Code Review](/contents/BasicEducation/CodeReview.md)
+* [Clean Code](/contents/BasicEducation/CleanCode.md)
+* Phase 자료 정리
+* Core History
+* opensource queryparse
+* CI 공부
+
+### Main
+* [기반] Phase, Alice UI, DB, Select
+
+### DB Core System : DB 변수 정의하기
+    //////////////////////////////////////////////////////////////////////////
+    // 일반 데이터 정의
+    // Reference : https://docs.microsoft.com/ko-kr/cpp/cpp/data-type-ranges?view=vs-2019
+    //
+    //  1) 불리언 타입 변수
+    //      4 : BOOL (사실 난 없애고 싶음..ㅠㅠ)
+    //      1 : bool
+    //  2) 정수형 변수
+    //      1 : char
+    //      1 : unsigned char, (BYTE)
+    //      2 : short
+    //      2 : unsigned short, wchar_t
+    //      4 : int (Typically 2 bytes on old architectures)
+    //      4 : unsigned int, UINT(얘도 없애고 싶음ㅠㅠ)
+    //      4 : long
+    //      4 : unsigned long
+    //      4 or 8 : DWORD_PTR (System Dependent)
+    //           * DWORD_PTR 존재의 이유
+    //           Polymorphic 자료형 : 다양한 모습이 있는, 다형적 이라는 뜻
+    //           포인터 기반의 자료를 표현하기 위해 만들어진 자료형
+    //           컴퓨터의 주소 비트(32비트 또는 64비트) 환경에 따라 주소를 표현할 수 있는 크기가 다르다.
+    //           그렇기 때문에 어떤 데이터의 주솟 값의 변수를 다형적으로 표현해야 할 요구사항이 생겨났기 때문이다.
+    //           우리의 MData의 주솟 값을 나타내는 MIterator도 사실은 DWORD_PTR 이 아이이다.
+    //  3) 실수형 변수
+    //      4 : float
+    //      8 : double
+    //  4) Enum, Enum Class (Same as int)
+    //  5) Color (Same as int)
+    //////////////////////////////////////////////////////////////////////////
+
+
+### 신입사원 교육
+### 문서 작성
+### 자잘한 UI들 개선
