--- a/contents/2019.11/11.md
+++ b/contents/2019.11/11.md
@@ -221,7 +221,42 @@
 * [기반] Phase, Alice UI, DB, Select
 
 ### DB Core System : DB 변수 정의하기
+> (DB Reflection 개발 중, DB의 변수들은 제한되게 관리되어야 할 필요성을 느꼈다.)
+> 1. Size 제한
+> 2. Query로 확장시키기 위한 제한
+> 3. Polymorphic 자료형의 위험성
+> 4. 많은 자원 낭비 (충분히 작은 크기의 데이터로 표현할 수 있는데 큰 데이터로 정의할 경우)
+
+**메뉴얼 작성!**
+
     //////////////////////////////////////////////////////////////////////////
+    // 사용가능한 MIDAS DB 변수
+    //
+    // MIDAS Object 정의
+    //  * Vector Type의 정의는 MTArray 사용할 것 (In MTArray.hpp)
+    //  1) MKey (In here)
+    //  2) MIterator (In here)
+    //       * 4 or 8 : MIterator(DWORD_PTR) : System Dependent
+    //           * DWORD_PTR 존재의 이유
+    //           Polymorphic 자료형 : 다양한 모습이 있는, 다형적 이라는 뜻
+    //           포인터 기반의 자료를 표현하기 위해 만들어진 자료형
+    //           컴퓨터의 주소 비트(32비트 또는 64비트) 환경에 따라 주소를 표현할 수 있는 크기가 다르다.
+    //           그렇기 때문에 어떤 데이터의 주솟 값의 변수를 다형적으로 표현해야 할 요구사항이 생겨났기 때문이다.
+    //           우리의 MData의 주솟 값을 나타내는 MIterator도 사실은 DWORD_PTR 이 아이이다.
+    //  3) MVector (In here)
+    //  4) MPlane (In here)
+    //  5) MMatrix (In MMatrix.hpp)
+    //       * MMatrix 의 Reflection 정의 방법 
+    //       이차원 배열은 Reflection 변수 정의 타입 중 지원할 수 있는 타입이 없기 때문에, 하나씩 Reflection을 추가하도록 한다.
+    //       ex) InstancingDef.h
+    //
+    // 문자열 관려 (In MShortStr.hpp)
+    //  16 : MParamStr
+    //  32 : MShortStr
+    //  64 : MStr;
+    //  128 : MLongStr;
+    //  260 : MPathStr;
+    //
     // 일반 데이터 정의
     // Reference : https://docs.microsoft.com/ko-kr/cpp/cpp/data-type-ranges?view=vs-2019
     //
@@ -230,20 +265,15 @@
     //      1 : bool
     //  2) 정수형 변수
     //      1 : char
-    //      1 : unsigned char, (BYTE)
+    //      1 : unsigned char, BYTE
     //      2 : short
     //      2 : unsigned short, wchar_t
     //      4 : int (Typically 2 bytes on old architectures)
     //      4 : unsigned int, UINT(얘도 없애고 싶음ㅠㅠ)
     //      4 : long
     //      4 : unsigned long
-    //      4 or 8 : DWORD_PTR (System Dependent)
-    //           * DWORD_PTR 존재의 이유
-    //           Polymorphic 자료형 : 다양한 모습이 있는, 다형적 이라는 뜻
-    //           포인터 기반의 자료를 표현하기 위해 만들어진 자료형
-    //           컴퓨터의 주소 비트(32비트 또는 64비트) 환경에 따라 주소를 표현할 수 있는 크기가 다르다.
-    //           그렇기 때문에 어떤 데이터의 주솟 값의 변수를 다형적으로 표현해야 할 요구사항이 생겨났기 때문이다.
-    //           우리의 MData의 주솟 값을 나타내는 MIterator도 사실은 DWORD_PTR 이 아이이다.
+    //      8 : long long
+    //      8 : unsigned long long
     //  3) 실수형 변수
     //      4 : float
     //      8 : double
