--- a/contents/2019.11/11.md
+++ b/contents/2019.11/11.md
@@ -222,7 +222,7 @@
 
 ### DB Core System : DB 변수 정의하기
 > (DB Reflection 개발 중, DB의 변수들은 제한되게 관리되어야 할 필요성을 느꼈다.)
-> 1. Size 제한
+> 1. Size 제한 (Data 별 Offset 관리가 확실하게 되어야 함) -> 전 버젼 DB 호환이 가능해짐
 > 2. Query로 확장시키기 위한 제한
 > 3. Polymorphic 자료형의 위험성
 > 4. 많은 자원 낭비 (충분히 작은 크기의 데이터로 표현할 수 있는데 큰 데이터로 정의할 경우)
