--- a/contents/2019.11/11.md
+++ b/contents/2019.11/11.md
@@ -273,7 +273,7 @@
     //      4 : long
     //      4 : unsigned long
     //      8 : long long
-    //      8 : unsigned long long
+    //      8 : unsigned long long, size_t
     //  3) 실수형 변수
     //      4 : float
     //      8 : double
