--- a/contents/2019.11/11.md
+++ b/contents/2019.11/11.md
@@ -292,7 +292,7 @@
 
 <br/>
 
-## 11.13
+## 11.14
 
 ### 공부, 정리할 것
 * [Code Review](/contents/BasicEducation/CodeReview.md)
@@ -305,6 +305,31 @@
 ### Main
 * [기반] Phase, Alice UI, DB, Select
 
+### DB Core 계속!
+### 신입사원 교육
+### 문서 작성
+### 자잘한 UI들 개선
+
+
+
+
+
+<br/>
+
+## 11.15
+
+### 공부, 정리할 것
+* [Code Review](/contents/BasicEducation/CodeReview.md)
+* [Clean Code](/contents/BasicEducation/CleanCode.md)
+* Phase 자료 정리
+* Core History
+* opensource queryparse
+* CI 공부
+
+### Main
+* [기반] Phase, Alice UI, DB, Select
+
+### Code Review
 ### DB Core 계속!
 ### 신입사원 교육
 ### 문서 작성
