--- a/contents/2019.11/11.md
+++ b/contents/2019.11/11.md
@@ -359,3 +359,57 @@
 ### 신입사원 교육
 ### 문서 작성
 ### 자잘한 UI들 개선
+
+
+
+
+
+<br/>
+
+## 11.19
+
+### 공부, 정리할 것
+* [Code Review](/contents/BasicEducation/CodeReview.md)
+* [Clean Code](/contents/BasicEducation/CleanCode.md)
+* Phase 자료 정리
+* Core History
+* opensource queryparse
+* CI 공부
+
+### Main
+* [기반] Phase, Alice UI, DB, Select
+
+### Code Review
+### DB Core 계속!
+### 신입사원 교육
+
+## DB Reflection 설계
+### 구조체 메모리 패킹
+1. 왜 구조체의 메모리 패킹 방식을 정렬해 놓을까?
+    - 바이트 패딩 : 적은 수의 컴파일러는 구조체의 필드를 메모리에 위치시킬 때, 중간에 빈 공간 없이 쭉 이어서 할당한다. 하지만 대부분의 컴파일러는 성능 향상을 위해 CPU가 접근하기 쉬운 위치에 필드를 배치하는데 이를 바이트 패딩이라고 한다. 그리고 중간에 빈 공간에 들어간 것을 패딩비트 라고 한다.
+    - 참고로 OS 32bit 환경에서는 4바이트 패킹 방식이 빠르고
+    - OS 64bit 환경에서는 8바이트 패킹 방식이 빠르다고 한다.
+2. 왜 빠를까?
+    - 패딩 비트가 없을 경우 어떤일이 일어나는지 생각해보자. 
+    - CPU는 메모리를 읽어올 때 한번에 4바이트 혹은 8바이트를 읽어온다.
+    - ex) char 변수 1, int 변수 1이 있는 구조체를 생각해보면, 32 bit OS의 컴퓨터는 int 변수를 읽기 위해, 2~4 바이트에 위치한 메모리를 읽기 위해 첫 4바이트의 메모리를 읽는다. 그리고 5바이트에 위치한 나머지 int의 메모리를 읽기위해 또 4바이트의 메모리를 읽는다. 즉 만약 패딩 비트로 char 뒤에 3바이트가 채워져있었다면, int 변수를 읽기위해 한번만 메모리를 읽어도 될 것을 2번 읽게 된 것이다. 이런 식으로 구조체 메모리 패킹 방식을 정렬해놓으면 쓸데 없이 메모리를 읽는 것을 막기 때문에 성능저하가 발생하지 않는다.
+    - Visual Studio 컴파일러 MSVC는 Default Packing 방식이 8바이트로 지정되어 있다. (운영체제에 의존하는 방식이 아닌, 컴파일러에 의해 정해짐을 유의한다.)
+3. 어디에 주로 쓰일까?
+    - 네트워크를 통한 구조체 전송시 바이트 패딩이 중요하다고 한다.
+        - 서로 다른 컴퓨터 시스템에서 메모리를 읽는 방식이 다르기 때문에, 패킹 시 채워진 패딩비트 때문에 각 컴퓨터에서 구조체를 다르게 읽을 수가 있기 때문 (그 시기에는 패킹 정렬 방식을 1바이트로 맞춰 놓는다고 한다.) 더해서 그 상태에서 직렬화 한 후 전송하여 퍼포먼스도 향상시키는 방법을 사용한다고 한다.
+4. 8 byte packing이라는 것은 무엇일까.
+    - 메모리가 들어가는 것을 보니, 디폴트 패킹 방식이 8바이트여도 구조체의 크기가 8의 배수로 맞춰지지 않는다. 왜 그럴까?
+    - 8 byte packing이라는 것은 구조체의 정렬 방식을 8의 배수로 맞추겠다는 게 아니라, 8 보다 큰 변수가 있을 경우 정렬을 포기하겠다는 뜻이다.
+    - 즉 만약 패킹 크기를 4로 바꾼다면, `double`이나 `long long` 같은 타입들이 사용되었을 때는 더이상 정렬을 보장하지 않게된다. 그러므로 default packing 방식이 8인 것이다.
+
+### 의문점
+1. 8바이트 패킹 방식이 OS bit에 의존적인 프로그램이 아닐 경우 기본적으로 빠르고, 좋은 것은 알겠다.
+2. 허나 읽는 속도는 빨라질지언정 전체 클래스의 크기는 늘어나게 될 것이다.
+3. 그 말은 저장되는 파일의 크기가 늘어난 다는 것이고, 기본적으로 사용자가 사용할 파일의 크기가 늘어나게 되는 것이다.
+4. 파일의 크기가 늘어나게 되도 괜찮을까??
+5. 메모리를 읽는 것이 더 빠르기 때문에???
+6. 우리는 추 후 웹 클라우드 환경에서 다리나, 어떤 특정 완성된 모델 파일 들을 제공한다.
+7. 저장되는 파일의 크기는 엄청 말도 안되게 클 것이다. (완성된 긴 다리 하나에 들어갈 철근들의 데이터들을 생각해보라)
+8. 우리나라는 컴퓨터가 빠르지만, 저기 인도 이런데는 컴퓨터 핵 느리다고 한다. (클라우드로 큰 파일을 다운 받을 수 있을까?)
+9. 4 byte packing, 8 byte packing 무엇이 더 좋을까...
+
