Update today studying

--- a/contents/2019.11/11.md
+++ b/contents/2019.11/11.md
@@ -405,11 +405,30 @@
 ### 의문점
 1. 8바이트 패킹 방식이 OS bit에 의존적인 프로그램이 아닐 경우 기본적으로 빠르고, 좋은 것은 알겠다.
 2. 허나 읽는 속도는 빨라질지언정 전체 클래스의 크기는 늘어나게 될 것이다.
-3. 그 말은 저장되는 파일의 크기가 늘어난 다는 것이고, 기본적으로 사용자가 사용할 파일의 크기가 늘어나게 되는 것이다.
-4. 파일의 크기가 늘어나게 되도 괜찮을까??
-5. 메모리를 읽는 것이 더 빠르기 때문에???
-6. 우리는 추 후 웹 클라우드 환경에서 다리나, 어떤 특정 완성된 모델 파일 들을 제공한다.
-7. 저장되는 파일의 크기는 엄청 말도 안되게 클 것이다. (완성된 긴 다리 하나에 들어갈 철근들의 데이터들을 생각해보라)
-8. 우리나라는 컴퓨터가 빠르지만, 저기 인도 이런데는 컴퓨터 핵 느리다고 한다. (클라우드로 큰 파일을 다운 받을 수 있을까?)
-9. 4 byte packing, 8 byte packing 무엇이 더 좋을까...
+3. Ram에서 올라가는 메모리가 느는 것!
+4. 파일에 저장하는 것은 어차피 JSon + 직렬화를 이용한다.
+5. 사용자가 RAM에 더 큰 메모리가 올라가도 괜찮겠지..
 
+
+
+
+
+
+<br/>
+
+## 11.20
+
+### 공부, 정리할 것
+* [Code Review](/contents/BasicEducation/CodeReview.md)
+* [Clean Code](/contents/BasicEducation/CleanCode.md)
+* Phase 자료 정리
+* Core History
+* opensource queryparse
+* CI 공부
+
+### Main
+* [기반] Phase, Alice UI, DB, Select
+
+### Code Review
+### DB Core 계속!
+### 신입사원 교육
