Update today studying

--- a/contents/2019.11/11.md
+++ b/contents/2019.11/11.md
@@ -432,3 +432,49 @@
 ### Code Review
 ### DB Core 계속!
 ### 신입사원 교육
+
+
+
+
+
+
+
+<br/>
+
+## 11.21
+
+### 공부, 정리할 것
+* [Code Review](/contents/BasicEducation/CodeReview.md)
+* [Clean Code](/contents/BasicEducation/CleanCode.md)
+* Phase 자료 정리
+* Core History
+* opensource queryparse
+* CI 공부
+
+### Main
+* [기반] Phase, Alice UI, DB, Select
+
+### Code Review
+### DB Core 계속!
+### 신입사원 교육
+
+### 구조체 메모리 패킹 퍼포먼스 실험
+#### 실험 1. 실무 검증 (Release 환경)
+* DB의 모든 구조체를 4바이트 패킹했을 시와, 8바이트 패킹했을 시
+* 실무에서 사용하는 389개의 리그레션 테스트 모듈을 모두 돌렸을 때의 시간을 비교
+* 결과 시간 차이 없음 (측정하기 불가능할 정도로)
+
+#### 실험 2. 더미 데이터(테스트 베드) 구축
+* 64bit os에서 4바이트 패킹한 구조체 중 막대하게 손해볼 수 밖에 없는 구조체를 가상으로 생성
+* 여러 반복을 통한 시간 검증 (8바이트 패킹과, 4바이 패킹에 대한 시간 비교)
+* 4byte packing 시 8.3 ~ 8.5초, 8byte packing 시 8.01 ~ 8.03초
+* 100000000의 반복문에서 한 구조체를 메모리에 올렸다가 내렸다가 한 결과였다.
+* 약 0.3초의 시간이 차이나는 것이 의미가 있는지 모르겠다...
+
+### 결론
+* 블로그에서 다들 오버헤드가 엄청 난다. c++ 프로그래머는 변수의 순서를 맞춰 메모리 정렬을 맞춰야 한다.
+* 이런 얘기를 하는데, 직접 실험해본 결과 의미가 있는 행위인지 잘 모르겠다.
+* 네트워크 개발 시 서로 다른 OS별 bit 수가 다를 때 1바이트로 packing 해야하는 경우 말고는 의미 없는 것 같다.
+
+### 그 외
+* 구조체 안의 구조체 변수는 메모리 정렬을 안해줌!! 신기 (MSVC 기준)
