Update today studying

--- a/contents/2019.11/11.md
+++ b/contents/2019.11/11.md
@@ -467,14 +467,42 @@
 #### 실험 2. 더미 데이터(테스트 베드) 구축
 * 64bit os에서 4바이트 패킹한 구조체 중 막대하게 손해볼 수 밖에 없는 구조체를 가상으로 생성
 * 여러 반복을 통한 시간 검증 (8바이트 패킹과, 4바이 패킹에 대한 시간 비교)
-* 4byte packing 시 8.3 ~ 8.5초, 8byte packing 시 8.01 ~ 8.03초
-* 100000000의 반복문에서 한 구조체를 메모리에 올렸다가 내렸다가 한 결과였다.
+* 100000000의 반복문에서 한 구조체를 메모리에 올렸다가 내렸다가 한 결과
+* 4byte packing 시 8.3 ~ 8.5초, 8byte packing 시 7.09 ~ 8.03초
 * 약 0.3초의 시간이 차이나는 것이 의미가 있는지 모르겠다...
+* 비율로 봐도 얼마 차이가 없다.
+* 아마 OS단에서 캐싱하거나, CPU가 알아서 너무 반복적인 작업은 한번에 처리하는 알고리즘? 이 있는 것 같다.
 
 ### 결론
 * 블로그에서 다들 오버헤드가 엄청 난다. c++ 프로그래머는 변수의 순서를 맞춰 메모리 정렬을 맞춰야 한다.
 * 이런 얘기를 하는데, 직접 실험해본 결과 의미가 있는 행위인지 잘 모르겠다.
+* 어쨋든 테스트 베드 환경을 만들던, 실무 모델로 테스트 하던 차이가 없었고, 이런 환경에서 OS, CPU, 컴파일러 누가 최적화 해줬던 간에 일반 개발자들은 구조체 메모리 정렬을 생각하며 개발해야 한다는 것에 동의하지 못할 것 같다...
 * 네트워크 개발 시 서로 다른 OS별 bit 수가 다를 때 1바이트로 packing 해야하는 경우 말고는 의미 없는 것 같다.
 
 ### 그 외
 * 구조체 안의 구조체 변수는 메모리 정렬을 안해줌!! 신기 (MSVC 기준)
+
+
+
+
+
+
+
+<br/>
+
+## 11.22
+
+### 공부, 정리할 것
+* [Code Review](/contents/BasicEducation/CodeReview.md)
+* [Clean Code](/contents/BasicEducation/CleanCode.md)
+* Phase 자료 정리
+* Core History
+* opensource queryparse
+* CI 공부
+
+### Main
+* [기반] Phase, Alice UI, DB, Select
+
+### Code Review
+### DB Core 계속!
+### 신입사원 교육
