Update today studying

--- a/contents/2019.11/11.md
+++ b/contents/2019.11/11.md
@@ -506,3 +506,28 @@
 ### Code Review
 ### DB Core 계속!
 ### 신입사원 교육
+
+
+
+
+
+
+
+
+<br/>
+
+## 11.25
+
+### 공부, 정리할 것
+* [Code Review](/contents/BasicEducation/CodeReview.md)
+* [Clean Code](/contents/BasicEducation/CleanCode.md)
+* Phase 자료 정리
+* Core History
+* opensource queryparse
+* CI 공부
+
+### Main
+* [기반] Phase, Alice UI, DB, Select
+
+### DB Core 계속!
+
