--- a/contents/2019.11/11.md
+++ b/contents/2019.11/11.md
@@ -560,3 +560,30 @@
 ### DB Core 계속!
 ### 개발자의 글쓰기
 * 조사, 순서, 숫자, 하다, 기호만 붙이고 나머지는 띄어쓴다.
+
+
+
+
+
+
+
+
+<br/>
+
+## 11.27
+
+### 공부, 정리할 것
+* [Code Review](/contents/BasicEducation/CodeReview.md)
+* [Clean Code](/contents/BasicEducation/CleanCode.md)
+* Phase 자료 정리
+* Core History
+* opensource queryparse
+* CI 공부
+
+### Main
+* [기반] Phase, Alice UI, DB, Select
+
+### Phase & Alice UI 교육
+### DB Core 계속!
+### Phase 문서화
+
