Update today studying

--- a/contents/2019.11/11.md
+++ b/contents/2019.11/11.md
@@ -586,4 +586,5 @@
 ### Phase & Alice UI 교육
 ### DB Core 계속!
 ### Phase 문서화
-### C++ Type Traits과 컴파일 상수
+### 프레임워크 개발 시, C++ Type Traits과 컴파일 상수와 if constexpr
+### 패딩 비트 다시 정리
