Update today studying

--- a/contents/2019.11/11.md
+++ b/contents/2019.11/11.md
@@ -588,3 +588,34 @@
 ### Phase 문서화
 ### 프레임워크 개발 시, C++ Type Traits과 컴파일 상수와 if constexpr
 ### 패딩 비트 다시 정리
+
+### c++ 공부
+* map의 `try_emplace`와 `insert_or_assign`
+
+
+
+
+
+
+
+<br/>
+
+## 11.28
+
+### 공부, 정리할 것
+* [Code Review](/contents/BasicEducation/CodeReview.md)
+* [Clean Code](/contents/BasicEducation/CleanCode.md)
+* Phase 자료 정리
+* Core History
+* opensource queryparse
+* CI 공부
+
+### Main
+* [기반] Phase, Alice UI, DB, Select
+
+### Phase & Alice UI 교육
+### DB Core 계속!
+### Phase 문서화
+
+### c++ 공부
+* map의 `try_emplace`와 `insert_or_assign`
