--- a/contents/2019.11/11.md
+++ b/contents/2019.11/11.md
@@ -619,3 +619,30 @@
 
 ### c++ 공부
 * map의 `try_emplace`와 `insert_or_assign`
+
+
+
+
+
+
+<br/>
+
+## 11.29
+
+### 공부, 정리할 것
+* [Code Review](/contents/BasicEducation/CodeReview.md)
+* [Clean Code](/contents/BasicEducation/CleanCode.md)
+* Phase 자료 정리
+* Core History
+* opensource queryparse
+* CI 공부
+
+### Main
+* [기반] Phase, Alice UI, DB, Select
+
+### Phase & Alice UI 교육
+### DB Core 계속!
+### Phase 문서화
+
+### c++ 공부
+std::byte
