Update today studying

--- a/contents/2019.11/11.md
+++ b/contents/2019.11/11.md
@@ -646,3 +646,130 @@
 
 ### c++ 공부
 std::byte
+
+
+
+
+
+
+<br/>
+
+## 12.02
+
+### 공부, 정리할 것
+* [Code Review](/contents/BasicEducation/CodeReview.md)
+* [Clean Code](/contents/BasicEducation/CleanCode.md)
+* Phase 자료 정리
+* Core History
+* opensource queryparse
+* CI 공부
+
+### Main
+* [기반] Phase, Alice UI, DB, Select
+
+### Phase & Alice UI 교육
+### DB Core 계속!
+### Phase 문서화
+
+### c++ 공부
+* enable_if
+Compile Time Type Switching <br/>
+
+Example) Enum Class Make Bit Set
+
+~~~cpp
+template<typename Enum>
+struct EnableBitMaskOperators
+{
+    static constexpr bool enable = false;
+};
+
+template<typename Enum>
+typename std::enable_if_t<EnableBitMaskOperators<Enum>::enable, Enum> operator |(Enum lhs, Enum rhs)
+{
+    using underlying = typename std::underlying_type_t<Enum>;
+
+    return static_cast<Enum> (
+        static_cast<underlying>(lhs) |
+        static_cast<underlying>(rhs)
+        );
+}
+
+template<typename Enum>
+typename std::enable_if_t<EnableBitMaskOperators<Enum>::enable, Enum> operator &(Enum lhs, Enum rhs)
+{
+    using underlying = typename std::underlying_type_t<Enum>;
+
+    return static_cast<Enum> (
+        static_cast<underlying>(lhs) &
+        static_cast<underlying>(rhs)
+        );
+}
+
+template<typename Enum>
+typename std::enable_if_t<EnableBitMaskOperators<Enum>::enable, Enum> operator ^(Enum lhs, Enum rhs)
+{
+    using underlying = typename std::underlying_type_t<Enum>;
+
+    return static_cast<Enum> (
+        static_cast<underlying>(lhs) ^
+        static_cast<underlying>(rhs)
+        );
+}
+
+template<typename Enum>
+typename std::enable_if_t<EnableBitMaskOperators<Enum>::enable, Enum> operator ~(Enum rhs)
+{
+    using underlying = typename std::underlying_type_t<Enum>;
+
+    return static_cast<Enum> (
+        ~static_cast<underlying>(rhs)
+        );
+}
+
+template<typename Enum>
+typename std::enable_if_t<EnableBitMaskOperators<Enum>::enable, Enum>& operator |=(Enum &lhs, Enum rhs)
+{
+    using underlying = typename std::underlying_type_t<Enum>;
+
+    lhs = static_cast<Enum> (
+        static_cast<underlying>(lhs) |
+        static_cast<underlying>(rhs)
+        );
+
+    return lhs;
+}
+
+template<typename Enum>
+typename std::enable_if_t<EnableBitMaskOperators<Enum>::enable, Enum>& operator &=(Enum &lhs, Enum rhs)
+{
+    using underlying = typename std::underlying_type_t<Enum>;
+
+    lhs = static_cast<Enum> (
+        static_cast<underlying>(lhs) &
+        static_cast<underlying>(rhs)
+        );
+
+    return lhs;
+}
+
+template<typename Enum>
+typename std::enable_if_t<EnableBitMaskOperators<Enum>::enable, Enum>& operator ^=(Enum &lhs, Enum rhs)
+{
+    using underlying = typename std::underlying_type_t<Enum>;
+
+    lhs = static_cast<Enum> (
+        static_cast<underlying>(lhs) ^
+        static_cast<underlying>(rhs)
+        );
+
+    return lhs;
+}
+
+template<typename Enum>
+typename std::enable_if_t<EnableBitMaskOperators<Enum>::enable, bool> CheckFlag(const Enum yourEnumClass)
+{
+    using underlying = typename std::underlying_type_t<Enum>;
+    return !!static_cast<underlying>(yourEnumClass);
+};
+~~~
