Update today studying

--- a/contents/2019.11/11.md
+++ b/contents/2019.11/11.md
@@ -773,3 +773,29 @@ typename std::enable_if_t<EnableBitMaskOperators<Enum>::enable, bool> CheckFlag(
     return !!static_cast<underlying>(yourEnumClass);
 };
 ~~~
+
+
+
+
+
+
+<br/>
+
+## 12.03
+
+### 공부, 정리할 것
+* [Code Review](/contents/BasicEducation/CodeReview.md)
+* [Clean Code](/contents/BasicEducation/CleanCode.md)
+* Phase 자료 정리
+* Core History
+* opensource queryparse
+* CI 공부
+
+### Main
+* [기반] Phase, Alice UI, DB, Select
+
+### DB Core 일단 중간 마무리
+### Naming Pluto?
+
+### Phase & Alice UI 교육
+### Phase 문서화
