--- a/contents/2019.11/11.md
+++ b/contents/2019.11/11.md
@@ -873,7 +873,33 @@ typename std::enable_if_t<EnableBitMaskOperators<Enum>::enable, bool> CheckFlag(
 * [기반] Phase, Alice UI, DB, Select
 
 ### DB Core Branch Merge!
-### Naming Pluto?
+### MIDAS Bash
+
+### Phase & Alice UI 교육
+### Phase 문서화
+
+
+
+
+
+
+<br/>
+
+## 12.09
+
+### 공부, 정리할 것
+* [Code Review](/contents/BasicEducation/CodeReview.md)
+* [Clean Code](/contents/BasicEducation/CleanCode.md)
+* Phase 자료 정리
+* Core History
+* opensource queryparse
+* CI 공부
+
+### Main
+* [기반] Phase, Alice UI, DB, Select
+
+### DB Core Branch Merge!
+### MIDAS Bash
 
 ### Phase & Alice UI 교육
 ### Phase 문서화
