Update today studying

--- a/contents/2019.11/11.md
+++ b/contents/2019.11/11.md
@@ -903,3 +903,42 @@ typename std::enable_if_t<EnableBitMaskOperators<Enum>::enable, bool> CheckFlag(
 
 ### Phase & Alice UI 교육
 ### Phase 문서화
+
+
+
+
+
+<br/>
+
+## 12.10
+
+### 공부, 정리할 것
+* [Code Review](/contents/BasicEducation/CodeReview.md)
+* [Clean Code](/contents/BasicEducation/CleanCode.md)
+* Phase 자료 정리
+* Core History
+* opensource queryparse
+* CI 공부
+
+### Main
+* [기반] Phase, Alice UI, DB, Select
+
+### 드디어 DB Core Branch Merge 완료....
+
+#### 테스트 방식은 꽤 양호했음!
+1. 현재 최신 Dev의 테스트 커버리지 확인
+2. 현재 리팩토링 한 DB Core에 대한 테스트 커버리지 확인
+3. 로컬 DB Core 브랜치에 Dev 머지 진행 (컨플릭트 해결)
+4. 해결한 Dev가 머지된 DB Core 브랜치의 테스트 커버리지 확인
+5. 테스트 커버리지가 모두 동일할 경우 로컬 DB Core 브랜치에서 Dev로 머지 진행
+
+#### 진행하면서 부족하다고 느낀 점
+1. 현 머지하려는 시점의 Dev 자체가 불안정할 경우가 있음ㅠㅠ  -> **직접 해당 브랜치 안정화를 진행하는 수밖에..**
+2. 테스트 커버리지 비교 시, 성공과 실패의 갯 수는 쉽게 비교가 가능하나, 어떤 테스트 모듈이 틀렸는지 모를줄 알았는데 **이럴 수가 diffchecker를 이용하자... <https://www.diffchecker.com/>**
+3. 부모 클래스에서 **virtual 함수인 getter 같은 함수에 const를 붙일경우** 만약 그것을 원래 오버라이딩 하던 아이들은 이제 다른 함수로 인식되서 오버라이딩 하지 않게된다. 만약 override tag를 붙여놨다면 제대로 알려주겠지만 그렇지 않은 경우 찾을 수 없을 만큼 힘든 Human Error가 될 수 있다. 다음에는 고생할 때 이것도 고려하자...
+4. core를 개발하니까 빌드 시간이 너~~무 길어 자꾸 시간이 붕 뜬다. 현실적으로 현재 모듈 단위로 core를 바로 분리할 수 없으니 빌드 후 남는 시간에 책을 읽던가 멍때리지 말고 무엇이든 하자
+
+### MIDAS Bash
+
+### Phase & Alice UI 교육
+### Phase 문서화
