update today studying

--- a/contents/2019.11/11.md
+++ b/contents/2019.11/11.md
@@ -933,7 +933,10 @@ typename std::enable_if_t<EnableBitMaskOperators<Enum>::enable, bool> CheckFlag(
 5. 테스트 커버리지가 모두 동일할 경우 로컬 DB Core 브랜치에서 Dev로 머지 진행
 
 #### 진행하면서 부족하다고 느낀 점
-1. 현 머지하려는 시점의 Dev 자체가 불안정할 경우가 있음ㅠㅠ  -> **직접 해당 브랜치 안정화를 진행하는 수밖에..**
+1. 현 머지하려는 시점의 Dev 자체가 불안정할 경우가 있음ㅠㅠ
+    1. 이게 현실적으로 제일 힘듬
+    2. 테스트 커버리즈를 어떻게 해서든 100%를 맞춰야 할 듯 -> 테스트 레이어링이 시급함!!
+    3. 일단 **직접 해당 브랜치 안정화를 진행하는 수밖에..**
 2. 테스트 커버리지 비교 시, 성공과 실패의 갯 수는 쉽게 비교가 가능하나, 어떤 테스트 모듈이 틀렸는지 모를줄 알았는데 **이럴 수가 diffchecker를 이용하자... <https://www.diffchecker.com/>**
 3. 부모 클래스에서 **virtual 함수인 getter 같은 함수에 const를 붙일경우** 만약 그것을 원래 오버라이딩 하던 아이들은 이제 다른 함수로 인식되서 오버라이딩 하지 않게된다. 만약 override tag를 붙여놨다면 제대로 알려주겠지만 그렇지 않은 경우 찾을 수 없을 만큼 힘든 Human Error가 될 수 있다. 다음에는 고생할 때 이것도 고려하자...
 4. core를 개발하니까 빌드 시간이 너~~무 길어 자꾸 시간이 붕 뜬다. 현실적으로 현재 모듈 단위로 core를 바로 분리할 수 없으니 빌드 후 남는 시간에 책을 읽던가 멍때리지 말고 무엇이든 하자
