Update today studying

--- a/contents/2019.11/11.md
+++ b/contents/2019.11/11.md
@@ -970,3 +970,34 @@ typename std::enable_if_t<EnableBitMaskOperators<Enum>::enable, bool> CheckFlag(
 ### MIDAS Bash
 ### Phase & Alice UI 교육
 ### Phase 문서화
+
+
+
+
+
+<br/>
+
+## 12.12
+
+### 공부, 정리할 것
+* [Code Review](/contents/BasicEducation/CodeReview.md)
+* [Clean Code](/contents/BasicEducation/CleanCode.md)
+* Phase 자료 정리
+* Core History
+* opensource queryparse
+* CI 공부
+
+### Main
+* [기반] Phase, Alice UI, DB, Select
+
+### if constexpr
+* 어셈블리 뜯어 보니 런타임 떄의 조건 부 처리를 하지 않는다!
+* 허나 해당 코드 안에 있는 부분들의 대한 컴파일러가 오류들은 잡아준다. (매크로와의 다른 점)
+* 오류는 잡아주면서 -> 런타임때의 퍼포먼스 손해는 없다.
+* 매크로의 사용을 줄여야 한다는 또 하나의 강점으로 말할 수 있을 것 같다.
+
+### DB Core Human Error Compile Time Checker 구현 완료!
+
+### MIDAS Bash
+### Phase & Alice UI 교육
+### Phase 문서화
