Update today studying

--- a/contents/2019.12/12.md
+++ b/contents/2019.12/12.md
@@ -380,3 +380,28 @@ typename std::enable_if_t<EnableBitMaskOperators<Enum>::enable, bool> CheckFlag(
 ### MIDAS Bash
 ### Phase & Alice UI 교육
 ### Phase 문서화
+
+
+
+
+
+<br/>
+
+## 12.17
+
+### 공부, 정리할 것
+* [Code Review](/contents/BasicEducation/CodeReview.md)
+* [Clean Code](/contents/BasicEducation/CleanCode.md)
+* Phase 자료 정리
+* Core History
+* opensource queryparse
+* CI 공부
+
+### Main
+* [기반] Phase, Alice UI, DB, Select
+
+### DB Core 상속 가능한 DB 형태 구현, API 구현
+
+### MIDAS Bash
+### Phase & Alice UI 교육
+### Phase 문서화
