--- a/contents/2019.12/12.md
+++ b/contents/2019.12/12.md
@@ -405,3 +405,28 @@ typename std::enable_if_t<EnableBitMaskOperators<Enum>::enable, bool> CheckFlag(
 ### MIDAS Bash
 ### Phase & Alice UI 교육
 ### Phase 문서화
+
+
+
+
+
+<br/>
+
+## 12.18
+
+### 공부, 정리할 것
+* [Code Review](/contents/BasicEducation/CodeReview.md)
+* [Clean Code](/contents/BasicEducation/CleanCode.md)
+* Phase 자료 정리
+* Core History
+* opensource queryparse
+* CI 공부
+
+### Main
+* [기반] Phase, Alice UI, DB, Select
+
+### 역할 재정의, Phase Core Update로 인한 안정화 작업 진행
+
+### MIDAS Bash
+### Phase & Alice UI 교육
+### Phase 문서화
