--- a/contents/2019.12/12.md
+++ b/contents/2019.12/12.md
@@ -579,3 +579,27 @@ typename std::enable_if_t<EnableBitMaskOperators<Enum>::enable, bool> CheckFlag(
 ### MIDAS Bash
 ### Phase & Alice UI 교육
 ### Phase 문서화
+
+
+
+
+
+<br/>
+
+## 12.31
+
+### 공부, 정리할 것
+* [Code Review](/contents/BasicEducation/CodeReview.md)
+* [Clean Code](/contents/BasicEducation/CleanCode.md)
+* Phase 자료 정리
+* Core History
+* opensource queryparse
+* CI, Github Action 공부
+
+### Main
+* [기반] Phase, Alice UI, DB, Select
+
+### 문서화 위주
+### MIDAS Bash
+### Phase & Alice UI 교육
+### Phase 문서화
