Update today studying

--- a/contents/2020.01/01.md
+++ b/contents/2020.01/01.md
@@ -48,3 +48,27 @@
 ### Phase & Alice UI 교육
 ### Phase 문서화
 
+
+
+
+<br/>
+
+## 01.06
+
+### 공부, 정리할 것
+* [Code Review](/contents/BasicEducation/CodeReview.md)
+* [Clean Code](/contents/BasicEducation/CleanCode.md)
+* Phase 자료 정리
+* Core History
+* opensource queryparse
+* CI, Github Action 공부
+
+### Main
+* [기반] Phase, Alice UI, DB, Select
+
+### Memory Leak 잡기
+### 문서화 위주
+### MIDAS Bash
+### Phase & Alice UI 교육
+### Phase 문서화
+
