--- a/contents/2020.01/01.md
+++ b/contents/2020.01/01.md
@@ -21,6 +21,7 @@
 ### Main
 * [기반] Phase, Alice UI, DB, Select
 
+### Phase/Label 안정화
 ### 문서화 위주
 ### MIDAS Bash
 ### Phase & Alice UI 교육
@@ -43,6 +44,7 @@
 ### Main
 * [기반] Phase, Alice UI, DB, Select
 
+### Phase/Label 안정화
 ### 문서화 위주
 ### MIDAS Bash
 ### Phase & Alice UI 교육
@@ -80,6 +82,33 @@
 <br/>
 
 ## 01.07
+
+### 공부, 정리할 것
+* [Code Review](/contents/BasicEducation/CodeReview.md)
+* [Clean Code](/contents/BasicEducation/CleanCode.md)
+* Phase 자료 정리
+* Core History
+* opensource queryparse
+* CI, Github Action 공부
+
+### Main
+* [기반] Phase, Alice UI, DB, Select
+
+### Phase/Label 안정화
+### Memory Leak 잡기
+### 문서화 위주
+### MIDAS Bash
+### Phase & Alice UI 교육
+### Phase 문서화
+
+
+
+
+
+
+<br/>
+
+## 01.08
 
 ### 공부, 정리할 것
 * [Code Review](/contents/BasicEducation/CodeReview.md)
