--- a/contents/2020.01/01.md
+++ b/contents/2020.01/01.md
@@ -180,3 +180,29 @@
 
 ### Memory Leak 잡기
 
+
+
+
+
+
+
+
+
+<br/>
+
+## 01.13
+
+### 공부, 정리할 것
+* [Code Review](/contents/BasicEducation/CodeReview.md)
+* [Clean Code](/contents/BasicEducation/CleanCode.md)
+* Phase 자료 정리
+* Core History
+* opensource queryparse
+* CI, Github Action 공부
+
+### Main
+* [기반] Phase, Alice UI, DB, Select
+
+### IFC Mesh 기반 설계
+### Select Obejct 인계 받기
+
