Update today studying

--- a/contents/2020.01/01.md
+++ b/contents/2020.01/01.md
@@ -203,6 +203,6 @@
 ### Main
 * [기반] Phase, Alice UI, DB, Select
 
-### IFC Mesh 기반 설계
+### IFC TesslatedConverter 구현!!!!!
 ### Select Obejct 인계 받기
 
