--- a/contents/2020.01/01.md
+++ b/contents/2020.01/01.md
@@ -206,3 +206,28 @@
 ### IFC TesslatedConverter 구현!!!!!
 ### Select Obejct 인계 받기
 
+
+
+
+
+
+
+
+<br/>
+
+## 01.14
+
+### 공부, 정리할 것
+* [Code Review](/contents/BasicEducation/CodeReview.md)
+* [Clean Code](/contents/BasicEducation/CleanCode.md)
+* Phase 자료 정리
+* Core History
+* opensource queryparse
+* CI, Github Action 공부
+
+### Main
+* [기반] Phase, Alice UI, DB, Select
+
+### IFC TesslatedConverter 구현!!!!!
+### Select Obejct 인계 받기
+
