--- a/contents/2020.01/01.md
+++ b/contents/2020.01/01.md
@@ -231,3 +231,37 @@
 ### IFC TesslatedConverter 구현!!!!!
 ### Select Obejct 인계 받기
 
+
+
+
+
+
+
+
+<br/>
+
+## 01.15
+
+### 공부, 정리할 것
+* [Code Review](/contents/BasicEducation/CodeReview.md)
+* [Clean Code](/contents/BasicEducation/CleanCode.md)
+* Phase 자료 정리
+* Core History
+* opensource queryparse
+* CI, Github Action 공부
+
+### Main
+* [기반] Phase, Alice UI, DB, Select
+
+### 연말정산
+### Unique Pointer Const Cast
+~~~
+// 밑에 방법을 쓰면 결과를 전달하기 전에 복사를 시도함, 때문에 컴파일 에러
+std::unique_ptr<int> myptr1 = std::move(const_cast<std::unique_ptr<int> >(myptr));    // x
+
+// 복사하기 전에 참조로 넘겨 올바르게 캐스팅
+std::unique_ptr<int> myptr1 = std::move(const_cast<std::unique_ptr<int>& >(myptr));   // o
+~~~
+### IFC TesslatedConverter 구현!!!!!
+### Select Obejct 인계 받기
+
