--- a/contents/2020.01/01.md
+++ b/contents/2020.01/01.md
@@ -265,3 +265,30 @@ std::unique_ptr<int> myptr1 = std::move(const_cast<std::unique_ptr<int>& >(myptr
 ### IFC TesslatedConverter 구현!!!!!
 ### Select Obejct 인계 받기
 
+
+
+
+
+
+
+
+
+<br/>
+
+## 01.15
+
+### 공부, 정리할 것
+* [Code Review](/contents/BasicEducation/CodeReview.md)
+* [Clean Code](/contents/BasicEducation/CleanCode.md)
+* Phase 자료 정리
+* Core History
+* opensource queryparse
+* CI, Github Action 공부
+
+### Main
+* [기반] Phase, Alice UI, DB, Select
+
+### 연말정산
+### IFC TesslatedConverter 검증
+### Select Obejct 인계 받기
+
