--- a/contents/2020.01/01.md
+++ b/contents/2020.01/01.md
@@ -380,3 +380,32 @@ std::unique_ptr<int> myptr1 = std::move(const_cast<std::unique_ptr<int>& >(myptr
 ### Phase Core Debugging 가능한 수준까지 연구
 ### Select Obejct 인계 받기
 
+
+
+
+
+
+
+
+
+
+
+<br/>
+
+## 01.21
+
+### 공부, 정리할 것
+* [Code Review](/contents/BasicEducation/CodeReview.md)
+* [Clean Code](/contents/BasicEducation/CleanCode.md)
+* Phase 자료 정리
+* Core History
+* opensource queryparse
+* CI, Github Action 공부
+
+### Main
+* [기반] Phase, Alice UI, DB, Select
+
+### DB Core 구조 개선
+### Select Obejct 연구
+### Phase Core 되도록 이면 직접 개발 시작
+
