--- a/contents/2020.01/01.md
+++ b/contents/2020.01/01.md
@@ -392,7 +392,7 @@ std::unique_ptr<int> myptr1 = std::move(const_cast<std::unique_ptr<int>& >(myptr
 
 <br/>
 
-## 01.21
+## 01.22
 
 ### 공부, 정리할 것
 * [Code Review](/contents/BasicEducation/CodeReview.md)
@@ -405,7 +405,36 @@ std::unique_ptr<int> myptr1 = std::move(const_cast<std::unique_ptr<int>& >(myptr
 ### Main
 * [기반] Phase, Alice UI, DB, Select
 
-### DB Core 구조 개선
+### DB Core 구조 개선(Structure Packing Control)
+### Select Obejct 연구
+### Phase Core 되도록 이면 직접 개발 시작
+
+
+
+
+
+
+
+
+
+
+
+<br/>
+
+## 01.23
+
+### 공부, 정리할 것
+* [Code Review](/contents/BasicEducation/CodeReview.md)
+* [Clean Code](/contents/BasicEducation/CleanCode.md)
+* Phase 자료 정리
+* Core History
+* opensource queryparse
+* CI, Github Action 공부
+
+### Main
+* [기반] Phase, Alice UI, DB, Select
+
+### DB Core 구조 개선(Structure Packing Control, Table Dependency Injection)
 ### Select Obejct 연구
 ### Phase Core 되도록 이면 직접 개발 시작
 
