--- a/contents/2020.01/01.md
+++ b/contents/2020.01/01.md
@@ -438,3 +438,34 @@ std::unique_ptr<int> myptr1 = std::move(const_cast<std::unique_ptr<int>& >(myptr
 ### Select Obejct 연구
 ### Phase Core 되도록 이면 직접 개발 시작
 
+
+
+
+
+
+
+
+
+
+
+
+<br/>
+
+## 01.23
+
+### 공부, 정리할 것
+* [Code Review](/contents/BasicEducation/CodeReview.md)
+* [Clean Code](/contents/BasicEducation/CleanCode.md)
+* Phase 자료 정리
+* Core History
+* opensource queryparse
+* CI, Github Action 공부
+
+### Main
+* [기반] Phase, Alice UI, DB, Select
+
+### DB Core 구조 개선(Table Dependency Injection)
+* 이거 `Structure Packing Control` 드디어 연구 발표 통과, 및 Merge 완료!
+* MDay로 팀원들한테 공유만 하면 될 듯ㅎㅎ
+### Select Obejct 연구
+### Phase Core 되도록이면 직접 Debugging 개발 시작
