--- a/contents/2020.01/01.md
+++ b/contents/2020.01/01.md
@@ -501,3 +501,34 @@ std::unique_ptr<int> myptr1 = std::move(const_cast<std::unique_ptr<int>& >(myptr
 ### DB Core 구조 개선(Table Dependency Injection)
 ### Select Obejct 연구
 ### Phase Core 되도록이면 직접 Debugging 개발 시작
+
+
+
+
+
+
+
+
+
+
+
+
+<br/>
+
+## 01.30
+
+### 공부, 정리할 것
+* [Code Review](/contents/BasicEducation/CodeReview.md)
+* [Clean Code](/contents/BasicEducation/CleanCode.md)
+* Phase 자료 정리
+* Core History
+* opensource queryparse
+* CI, Github Action 공부
+
+### Main
+* [기반] Phase, Alice UI, DB, Select
+
+### RT Module Keep Alive Checker 구현
+### DB Core 구조 개선(Table Dependency Injection)
+### Select Obejct 연구
+### Phase Core 되도록이면 직접 Debugging 개발 시작
