Update today studying

--- a/contents/2020.02/02.md
+++ b/contents/2020.02/02.md
@@ -25,3 +25,27 @@
 ### DB Core 구조 개선(Table Dependency Injection)
 ### Select Obejct 연구
 ### Phase Core 되도록이면 직접 Debugging 개발 시작
+
+
+
+
+<br/>
+
+## 02.05
+
+### 공부, 정리할 것
+* [Code Review](/contents/BasicEducation/CodeReview.md)
+* [Clean Code](/contents/BasicEducation/CleanCode.md)
+* Phase 자료 정리
+* Core History
+* opensource queryparse
+* CI, Github Action 공부
+
+### Main
+* [기반] Phase, Alice UI, DB, Select
+
+### 이것 저것 2월 정리 (연말정산 및 자금 관리 개인 git private 만들어야 겠다.)
+### LabelPhase UI Control 개선
+### DB Core 구조 개선(Table Dependency Injection)
+### Select Obejct 연구
+### Phase Core 되도록이면 직접 Debugging 개발 시작
