--- a/contents/2020.02/02.md
+++ b/contents/2020.02/02.md
@@ -91,6 +91,7 @@
 ### Main
 * [기반] Phase, Alice UI, DB, Select
 
+### Phase 안정화
 ### 이것 저것 2월 정리 (log sub module 구성하기)
 ### DB Core 구조 개선(Table Dependency Injection)
 ### Select Obejct 연구
@@ -114,6 +115,31 @@
 ### Main
 * [기반] Phase, Alice UI, DB, Select
 
+### Phase 안정화
+### 이것 저것 2월 정리 (log sub module 구성하기)
+### DB Core 구조 개선(Table Dependency Injection)
+### Select Obejct 연구
+### Phase Core 되도록이면 직접 Debugging 개발 시작
+
+
+
+
+<br/>
+
+## 02.11
+
+### 공부, 정리할 것
+* [Code Review](/contents/BasicEducation/CodeReview.md)
+* [Clean Code](/contents/BasicEducation/CleanCode.md)
+* Phase 자료 정리
+* Core History
+* opensource queryparse
+* CI, Github Action 공부
+
+### Main
+* [기반] Phase, Alice UI, DB, Select
+
+### Phase 안정화
 ### 이것 저것 2월 정리 (log sub module 구성하기)
 ### DB Core 구조 개선(Table Dependency Injection)
 ### Select Obejct 연구
