Update today studying

--- a/contents/2020.02/02.md
+++ b/contents/2020.02/02.md
@@ -305,3 +305,25 @@
 ### DB Core 구조 개선(Table Dependency Injection)
 ### Select Obejct 연구
 ### Phase Core 되도록이면 직접 Debugging 개발 시작
+
+
+
+
+<br/>
+
+## 02.21
+
+### 공부, 정리할 것
+* [Code Review](/contents/BasicEducation/CodeReview.md)
+* [Clean Code](/contents/BasicEducation/CleanCode.md)
+* Phase 자료 정리
+* Core History
+
+### Main
+* [기반] Phase, Alice UI, DB, Select
+
+### Install Shield 업무 추가 : ㅠ.ㅠ Drafter 추가
+### 이것 저것 2월 정리 (log sub module 구성하기)
+### DB Core 구조 개선(Table Dependency Injection)
+### Select Obejct 연구
+### Phase Core 되도록이면 직접 Debugging 개발 시작
