Update today studying

--- a/contents/2020.03/03.md
+++ b/contents/2020.03/03.md
@@ -48,3 +48,27 @@
 ### Select Obejct 연구
 ### Phase Core 되도록이면 직접 Debugging 개발 시작
 
+
+
+
+
+<br/>
+
+## 03.04
+
+### 공부, 정리할 것
+* [Code Review](/contents/BasicEducation/CodeReview.md)
+* [Clean Code](/contents/BasicEducation/CleanCode.md)
+* Phase 자료 정리
+* Core History
+* Table Dependency Injection
+
+### Main
+* [기반] Phase, Alice UI, DB, Select
+
+### DB Core 구조 개선(Table Type Object)
+### Install Shield 거의 완료 (검증만 남음)
+### gtest 연구
+### Select Obejct 연구
+### Phase Core 되도록이면 직접 Debugging 개발 시작
+
