Update today studying

--- a/contents/2020.03/03.md
+++ b/contents/2020.03/03.md
@@ -312,3 +312,37 @@
 
 
 
+
+
+
+
+
+
+
+
+
+
+
+<br/>
+
+## 03.17
+
+### 공부, 정리할 것
+* [Code Review](/contents/BasicEducation/CodeReview.md)
+* [Clean Code](/contents/BasicEducation/CleanCode.md)
+* Phase 자료 정리
+* Core History
+* Table Dependency Injection
+
+### Main
+* [기반] Phase, Alice UI, DB, Select
+
+### 소프트웨어 테스트 방법론 공부
+### DB Core Test Project (Hello! Pluto!)
+### DB Core 구조 개선 끝 & 변경 이유 및 변경 사항 공유 후 머지 (메일 이어서 계속 작성 중)
+### gtest 연구
+### Select Obejct 연구
+### Phase Core 되도록이면 직접 Debugging 개발 시작
+
+
+
