Update today studying

--- a/contents/2020.03/03.md
+++ b/contents/2020.03/03.md
@@ -473,3 +473,27 @@
 
 ### DB Core 개편 마무리 작업
 ### 소프트웨어 테스트 방법론 공부
+
+
+
+
+
+
+
+
+<br/>
+
+## 03.26
+
+### 공부, 정리할 것
+* [Code Review](/contents/BasicEducation/CodeReview.md)
+* [Clean Code](/contents/BasicEducation/CleanCode.md)
+* Phase 자료 정리
+* Core History
+* Table Dependency Injection
+
+### Main
+* [기반] Phase, DB Core(Pluto)
+
+### DB Core 개편 마무리 작업 / New DB Core 발표
+### 소프트웨어 테스트 방법론 공부
