Update today studying

--- a/contents/2020.04/04.md
+++ b/contents/2020.04/04.md
@@ -108,3 +108,25 @@
 ### 기반 1파트 파트 회의
 ### 성공적으로 발표 끝! / 마일스톤 대비로 인해 다음 주 월요일에 머지 ^.^
 ### 소프트웨어 테스트 방법론 공부
+
+
+
+
+
+<br/>
+
+## 04.09
+
+### 공부, 정리할 것
+* [Code Review](/contents/BasicEducation/CodeReview.md)
+* [Clean Code](/contents/BasicEducation/CleanCode.md)
+* Phase 자료 정리
+* DB Core 자료 정리
+
+### Main
+* [기반] Phase, DB Core(Pluto)
+
+### DB Core 안정화 된 듯..? 뿌듯 뿌듯 ^.^
+### Query 코드 리뷰 리뷰어
+### LabelPhase 기능 추가
+### 소프트웨어 테스트 방법론 공부
