Update today studying

--- a/contents/2020.04/04.md
+++ b/contents/2020.04/04.md
@@ -130,3 +130,23 @@
 ### Query 코드 리뷰 리뷰어
 ### LabelPhase 기능 추가
 ### 소프트웨어 테스트 방법론 공부
+
+
+
+
+
+<br/>
+
+## 04.10
+
+### 공부, 정리할 것
+* [Code Review](/contents/BasicEducation/CodeReview.md)
+* [Clean Code](/contents/BasicEducation/CleanCode.md)
+* Phase 자료 정리
+* DB Core 자료 정리
+
+### Main
+* [기반] Phase, DB Core(Pluto)
+
+### 기존 마무리 못했던 일들 전체적으로 정리 (DB Core, Phase Core, Label, Query : + RT, 문서화 전까지)
+### 소프트웨어 테스트 방법론 공부
