Update today studying

--- a/contents/2020.04/04.md
+++ b/contents/2020.04/04.md
@@ -171,3 +171,24 @@
 ### 기존 마무리 못했던 일들 전체적으로 정리 (DB Core, Phase Core, Label, Query : + RT, 문서화 전까지)
 ### 내일부터 문서화에 집중할 수 있도록 준비 끝
 ### 소프트웨어 테스트 방법론 공부
+
+
+
+
+
+<br/>
+
+## 04.16
+
+### 공부, 정리할 것
+* [Code Review](/contents/BasicEducation/CodeReview.md)
+* [Clean Code](/contents/BasicEducation/CleanCode.md)
+* Phase 자료 정리
+* DB Core 자료 정리
+
+### Main
+* [기반] Phase, DB Core(Pluto)
+
+### Phase Merge
+### QA 문서화
+### 소프트웨어 테스트 방법론 공부
