Update today studying

--- a/contents/2020.04/04.md
+++ b/contents/2020.04/04.md
@@ -255,3 +255,27 @@
 ### Phase Bug Fix
 ### QA 문서화
 ### 소프트웨어 테스트 방법론 공부
+
+
+
+
+
+<br/>
+
+## 04.22
+
+### 공부, 정리할 것
+* [Code Review](/contents/BasicEducation/CodeReview.md)
+* [Clean Code](/contents/BasicEducation/CleanCode.md)
+* Phase 자료 정리
+* DB Core 자료 정리
+
+### Main
+* [기반] Phase, DB Core(Pluto)
+
+### 일일브리핑 준비
+### DB Core Storage Manager 개선
+### DB Core 내부 API 캡슐화 시작
+### Phase Bug Fix
+### QA 문서화
+### 소프트웨어 테스트 방법론 공부
