Update today studiyng

--- a/contents/2020.04/04.md
+++ b/contents/2020.04/04.md
@@ -300,3 +300,25 @@
 ### Phase Bug Fix
 ### QA 문서화
 ### 소프트웨어 테스트 방법론 공부
+
+
+
+
+
+<br/>
+
+## 04.24
+
+### 공부, 정리할 것
+* [Code Review](/contents/BasicEducation/CodeReview.md)
+* [Clean Code](/contents/BasicEducation/CleanCode.md)
+* Phase 자료 정리
+* DB Core 자료 정리
+
+### Main
+* [기반] Phase, DB Core(Pluto)
+
+### DB Query Tracer
+### Phase Bug Fix
+### QA 문서화
+### 소프트웨어 테스트 방법론 공부
