Update today studying

--- a/contents/2020.05/05.md
+++ b/contents/2020.05/05.md
@@ -17,6 +17,25 @@
 * DB Core
 
 ### DB Container 리팩토링
+### STL 공부 & 정리
+### Phase Bug Fix
+### QA 문서화
+### 소프트웨어 테스트 방법론 공부
+
+
+
+<br/>
+
+## 05.06
+
+### 공부, 정리할 것
+* [Code Review](/contents/BasicEducation/CodeReview.md)
+* [Clean Code](/contents/BasicEducation/CleanCode.md)
+* Phase
+* DB Core
+
+### DB Container 리팩토링
+### STL 공부 & 정리
 ### Phase Bug Fix
 ### QA 문서화
 ### 소프트웨어 테스트 방법론 공부
