Update today studying

--- a/contents/2020.05/05.md
+++ b/contents/2020.05/05.md
@@ -24,9 +24,26 @@
 
 
 
+
 <br/>
 
-## 05.06
+## 05.07 ~ 05.08
+
+### 공부, 정리할 것
+* [Code Review](/contents/BasicEducation/CodeReview.md)
+* [Clean Code](/contents/BasicEducation/CleanCode.md)
+* Phase
+* DB Core
+
+### 워크샵 (미들웨어 개발자로서, 비개발자에게 프로그램 품질에 대한 세미나 진행)
+
+
+
+
+
+<br/>
+
+## 05.11
 
 ### 공부, 정리할 것
 * [Code Review](/contents/BasicEducation/CodeReview.md)
@@ -39,3 +56,5 @@
 ### Phase Bug Fix
 ### QA 문서화
 ### 소프트웨어 테스트 방법론 공부
+
+
