Update today studying

--- a/contents/2020.05/05.md
+++ b/contents/2020.05/05.md
@@ -92,10 +92,12 @@
 ## 05.13
 
 ### 공부, 정리할 것
-* [Code Review](/contents/BasicEducation/CodeReview.md)
 * [Clean Code](/contents/BasicEducation/CleanCode.md)
 * Phase
 * DB Core
+
+### Today Trand Monitering
+#### [Code Review](/contents/BasicEducation/CodeReview.md)
 
 ### GUID 구현
 ### STL 공부 & 정리
