Update today studying

--- a/contents/2020.05/05.md
+++ b/contents/2020.05/05.md
@@ -113,11 +113,9 @@
 
 
 
-
-
 <br/>
 
-## 05.13
+## 05.14
 
 ### 공부, 정리할 것
 * [Clean Code](/contents/BasicEducation/CleanCode.md)
@@ -125,6 +123,31 @@
 * DB Core
 
 ### GUID 구현 & 테스트 케이스 작성
+### STL 공부 & 정리
+### Phase Bug Fix
+### QA 문서화
+### 소프트웨어 테스트 방법론 공부
+
+
+
+
+
+
+
+
+
+
+
+<br/>
+
+## 05.15
+
+### 공부, 정리할 것
+* [Clean Code](/contents/BasicEducation/CleanCode.md)
+* Phase
+* DB Core
+
+### Phase, UI Interface 버그 픽스
 ### STL 공부 & 정리
 ### Phase Bug Fix
 ### QA 문서화
