Update today studing

--- a/contents/2020.05/05.md
+++ b/contents/2020.05/05.md
@@ -320,7 +320,7 @@
 
 <br/>
 
-## 05.26
+## 05.27
 
 ### 공부, 정리할 것
 * [Clean Code](/contents/BasicEducation/CleanCode.md)
@@ -340,13 +340,32 @@
 
 <br/>
 
-## 05.27
+## 05.28
 
-### 공부, 정리할 것
-* [Clean Code](/contents/BasicEducation/CleanCode.md)
+### [주 업무] Framework 개발
 * Phase Core
 * DB Core
 
+### [Clean Code](/contents/BasicEducation/CleanCode.md)
+### DialogPhase 코드 리뷰 오랫동안 했던 것(Pair Programming, Reviewer) Phase Branch에 머지
+### Phase, UI Interface Test 커버리지 확대
+### STL 공부 & 정리
+### Phase Bug Fix
+### QA 문서화
+### 소프트웨어 테스트 방법론 공부
+
+
+
+
+<br/>
+
+## 05.29
+
+### [주 업무] Framework 개발
+* Phase Core
+* DB Core
+
+### [Clean Code](/contents/BasicEducation/CleanCode.md)
 ### DialogPhase 코드 리뷰 오랫동안 했던 것(Pair Programming, Reviewer) Phase Branch에 머지
 ### Phase, UI Interface Test 커버리지 확대
 ### STL 공부 & 정리
