Update today studying

--- a/contents/2020.06/06.md
+++ b/contents/2020.06/06.md
@@ -8,13 +8,14 @@
 
 <br/>
 
-## 05.29
+## 06.01
 
-### [주 업무] Framework 개발
+### Framework 개발 [주 업무] 
 * Phase Core
 * DB Core
 
 ### [Clean Code](/contents/BasicEducation/CleanCode.md)
+* 마지막 요약 정리만 하면 될 듯!
 ### Phase, UI Interface Test 커버리지 확대
 ### STL 공부 & 정리
 ### Phase Bug Fix
