Update today studying

--- a/contents/2020.06/06.md
+++ b/contents/2020.06/06.md
@@ -21,3 +21,18 @@
 ### Phase Bug Fix
 ### QA 문서화
 ### 소프트웨어 테스트 방법론 공부
+
+### Github
+* Github Mobile
+* [Github Cloud Code Space](https://github.com/features/codespaces/?utm_source=announcement&utm_medium=blog&utm_campaign=satellite-product-recap)
+    * 즉시 개발 가능
+    * 즉각적 CI 확인 가능
+    * Visual Studio 기반
+* GitHub Discussions
+    * 그냥 CPP Corn이나 Stack Overflow 처럼 토론, 커뮤니티 공간 만드는 듯
+    * 토론은 한 프로젝트에 종속되어 열림
+* GitHub Advanced Security
+    * `code scanning` : 와 개쩜 CodeQL의 강력한 정적 분석 기능을 무료로 제공하는 듯!!
+    * `security` : OWASP 10 가지 취약점과 같은 일반적인 코딩 실수로부터 사용자를 보호하는 쿼리를 개발했고 제공받음!
+* Github Private
+    * 무료 제공한 것! 이미 쓰고 있음
