Update today studying

--- a/contents/2020.06/06.md
+++ b/contents/2020.06/06.md
@@ -88,3 +88,24 @@
     * `security` : OWASP 10 가지 취약점과 같은 일반적인 코딩 실수로부터 사용자를 보호하는 쿼리를 개발했고 제공받음!
 * Github Private
     * 무료 제공한 것! 이미 쓰고 있음
+
+
+
+
+<br/>
+
+## 06.03
+
+### Framework 개발 [주 업무] 
+* Phase Core
+* DB Core
+
+### 문서화 하고 싶은 것
+* QA 문서화
+* Github 최신 기술
+* [Clean Code](/contents/BasicEducation/CleanCode.md)
+* STL 공부 & 정리
+
+### 오늘 한 것
+* Phase, UI Interface Test 커버리지 확대
+* Phase Bug Fix
