Update today studying

--- a/contents/2020.06/06.md
+++ b/contents/2020.06/06.md
@@ -129,3 +129,23 @@
 
 ### 오늘 한 것
 * Phase History 재설계중...
+
+
+
+
+<br/>
+
+## 06.08
+
+### Framework 개발 [주 업무] 
+* Phase Core
+* DB Core
+
+### 문서화 하고 싶은 것
+* QA 문서화
+* Github 최신 기술
+* [Clean Code](/contents/BasicEducation/CleanCode.md)
+* STL 공부 & 정리
+
+### 오늘 한 것
+* Phase History 재설계중...  (85% 정도 완료)
