--- a/contents/2020.06/06.md
+++ b/contents/2020.06/06.md
@@ -10,16 +10,23 @@
 
 ## 06.01
 
-### Framework 개발 [주 업무] 
+### Framework 개발 [주 업무]
+
 * Phase Core
 * DB Core
 
 ### [Clean Code](/contents/BasicEducation/CleanCode.md)
+
 * 마지막 요약 정리만 하면 될 듯!
+
 ### Phase, UI Interface Test 커버리지 확대
+
 ### STL 공부 & 정리
+
 ### Phase Bug Fix
+
 ### QA 문서화
+
 ### 소프트웨어 테스트 방법론 공부
 
 
@@ -29,32 +36,42 @@
 
 ## 06.02
 
-### Framework 개발 [주 업무] 
+### Framework 개발 [주 업무]
+
 * Phase Core
 * DB Core
 
 ### [Clean Code](/contents/BasicEducation/CleanCode.md)
+
 * 마지막 요약 정리만 하면 될 듯!
+
 ### Phase, UI Interface Test 커버리지 확대
+
 ### STL 공부 & 정리
+
 ### Phase Bug Fix
+
 ### QA 문서화
+
 ### 소프트웨어 테스트 방법론 공부
-### WSL2 Setting + Theme 까지!
+
+### WSL2 Setting + Theme 까지
+
 ### Github
+
 * Github Mobile
 * [Github Cloud Code Space](https://github.com/features/codespaces/?utm_source=announcement&utm_medium=blog&utm_campaign=satellite-product-recap)
-    * 즉시 개발 가능
-    * 즉각적 CI 확인 가능
-    * Visual Studio 기반
+  * 즉시 개발 가능
+  * 즉각적 CI 확인 가능
+  * Visual Studio 기반
 * GitHub Discussions
-    * 그냥 CPP Corn이나 Stack Overflow 처럼 토론, 커뮤니티 공간 만드는 듯
-    * 토론은 한 프로젝트에 종속되어 열림
+  * 그냥 CPP Corn이나 Stack Overflow 처럼 토론, 커뮤니티 공간 만드는 듯
+  * 토론은 한 프로젝트에 종속되어 열림
 * GitHub Advanced Security
-    * `code scanning` : 와 개쩜 CodeQL의 강력한 정적 분석 기능을 무료로 제공하는 듯!!
-    * `security` : OWASP 10 가지 취약점과 같은 일반적인 코딩 실수로부터 사용자를 보호하는 쿼리를 개발했고 제공받음!
+  * `code scanning` : 와 개쩜 CodeQL의 강력한 정적 분석 기능을 무료로 제공하는 듯!!
+  * `security` : OWASP 10 가지 취약점과 같은 일반적인 코딩 실수로부터 사용자를 보호하는 쿼리를 개발했고 제공받음!
 * Github Private
-    * 무료 제공한 것! 이미 쓰고 있음
+  * 무료 제공한 것! 이미 쓰고 있음
 
 
 
@@ -63,52 +80,40 @@
 
 ## 06.03
 
-### Framework 개발 [주 업무] 
+### Framework 개발 [주 업무]
+
 * Phase Core
 * DB Core
 
 ### [Clean Code](/contents/BasicEducation/CleanCode.md)
+
 * 마지막 요약 정리만 하면 될 듯!
+
 ### Phase, UI Interface Test 커버리지 확대
+
 ### STL 공부 & 정리
+
 ### Phase Bug Fix
+
 ### QA 문서화
+
 ### 소프트웨어 테스트 방법론 공부
+
 ### Github
+
 * Github Mobile
 * [Github Cloud Code Space](https://github.com/features/codespaces/?utm_source=announcement&utm_medium=blog&utm_campaign=satellite-product-recap)
-    * 즉시 개발 가능
-    * 즉각적 CI 확인 가능
-    * Visual Studio 기반
+  * 즉시 개발 가능
+  * 즉각적 CI 확인 가능
+  * Visual Studio 기반
 * GitHub Discussions
-    * 그냥 CPP Corn이나 Stack Overflow 처럼 토론, 커뮤니티 공간 만드는 듯
-    * 토론은 한 프로젝트에 종속되어 열림
+  * 그냥 CPP Corn이나 Stack Overflow 처럼 토론, 커뮤니티 공간 만드는 듯
+  * 토론은 한 프로젝트에 종속되어 열림
 * GitHub Advanced Security
-    * `code scanning` : 와 개쩜 CodeQL의 강력한 정적 분석 기능을 무료로 제공하는 듯!!
-    * `security` : OWASP 10 가지 취약점과 같은 일반적인 코딩 실수로부터 사용자를 보호하는 쿼리를 개발했고 제공받음!
+  * `code scanning` : 와 개쩜 CodeQL의 강력한 정적 분석 기능을 무료로 제공하는 듯!!
+  * `security` : OWASP 10 가지 취약점과 같은 일반적인 코딩 실수로부터 사용자를 보호하는 쿼리를 개발했고 제공받음!
 * Github Private
-    * 무료 제공한 것! 이미 쓰고 있음
-
-
-
-
-<br/>
-
-## 06.03
-
-### Framework 개발 [주 업무] 
-* Phase Core
-* DB Core
-
-### 문서화 하고 싶은 것
-* QA 문서화
-* Github 최신 기술
-* [Clean Code](/contents/BasicEducation/CleanCode.md)
-* STL 공부 & 정리
-
-### 오늘 한 것
-* Phase, UI Interface Test 커버리지 확대
-* Phase Bug Fix
+  * 무료 제공한 것! 이미 쓰고 있음
 
 
 
@@ -117,17 +122,20 @@
 
 ## 06.04
 
-### Framework 개발 [주 업무] 
+### Framework 개발 [주 업무]
+
 * Phase Core
 * DB Core
 
-### 문서화 하고 싶은 것
+### 문서화 하고 싶은
+
 * QA 문서화
 * Github 최신 기술
 * [Clean Code](/contents/BasicEducation/CleanCode.md)
 * STL 공부 & 정리
 
 ### 오늘 한 것
+
 * Phase History 재설계중...
 
 
@@ -138,16 +146,19 @@
 ## 06.08
 
 ### Framework 개발 [주 업무] 
+
 * Phase Core
 * DB Core
 
 ### 문서화 하고 싶은 것
+
 * QA 문서화
 * Github 최신 기술
 * [Clean Code](/contents/BasicEducation/CleanCode.md)
 * STL 공부 & 정리
 
 ### 오늘 한 것
+
 * Phase History 재설계중...  (85% 정도 완료)
 
 
@@ -158,17 +169,20 @@
 
 ## 06.09
 
-### Framework 개발 [주 업무] 
+### Framework 개발 [주 업무]
+
 * Phase Core
 * DB Core
 
 ### 문서화 하고 싶은 것
+
 * QA 문서화
 * Github 최신 기술
 * [Clean Code](/contents/BasicEducation/CleanCode.md)
 * STL 공부 & 정리
 
 ### 오늘 한 것
+
 * Phase History 재구현 완료, 다양한 테스트 케이스 확보 중
 
 
@@ -180,16 +194,19 @@
 ## 06.10
 
 ### Framework 개발 [주 업무] 
+
 * Phase Core
 * DB Core
 
 ### 문서화 하고 싶은 것
+
 * QA 문서화
 * Github 최신 기술
 * [Clean Code](/contents/BasicEducation/CleanCode.md)
 * STL 공부 & 정리
 
 ### 오늘 한 것
+
 * 일단 DB Core 성능 개선한 거 머지 준비!
 * Phase History 재구현 완료, 다양한 테스트 케이스 확보 중
 
@@ -202,16 +219,19 @@
 ## 06.11
 
 ### Framework 개발 [주 업무] 
+
 * Phase Core
 * DB Core
 
 ### 문서화 하고 싶은 것
+
 * QA 문서화
 * Github 최신 기술
 * [Clean Code](/contents/BasicEducation/CleanCode.md)
 * STL 공부 & 정리
 
 ### 오늘 한 것
+
 * 일단 DB Core 성능 개선한 거 공지 & 머지 완료
 * Phase History 재구현 완료, 다양한 테스트 케이스 확보 중
 
@@ -224,16 +244,19 @@
 ## 06.15
 
 ### Framework 개발 [주 업무] 
+
 * Phase Core
 * DB Core
 
 ### 문서화 하고 싶은 것
+
 * QA 문서화
 * Github 최신 기술
 * [Clean Code](/contents/BasicEducation/CleanCode.md)
 * STL 공부 & 정리
 
 ### 오늘 한 것
+
 * Phase Merge 준비
 * Phase History 재구현 완료, 다양한 테스트 케이스 확보 중
 
@@ -246,15 +269,18 @@
 ## 06.16
 
 ### Framework 개발 [주 업무] 
+
 * Phase Core
 * DB Core
 
 ### 문서화 하고 싶은 것
+
 * QA 문서화
 * Github 최신 기술
 * [Clean Code](/contents/BasicEducation/CleanCode.md)
 * STL 공부 & 정리
 
 ### 오늘 한 것
-* Phase Merge 완료
+
+* Phase Merge
 * Phase History 재구현 완료, 다양한 테스트 케이스 확보 중
