Update today stduying

--- a/contents/2020.06/06.md
+++ b/contents/2020.06/06.md
@@ -145,7 +145,7 @@
 
 ## 06.08
 
-### Framework 개발 [주 업무] 
+### Framework 개발 [주 업무]
 
 * Phase Core
 * DB Core
@@ -193,7 +193,7 @@
 
 ## 06.10
 
-### Framework 개발 [주 업무] 
+### Framework 개발 [주 업무]
 
 * Phase Core
 * DB Core
@@ -218,7 +218,7 @@
 
 ## 06.11
 
-### Framework 개발 [주 업무] 
+### Framework 개발 [주 업무]
 
 * Phase Core
 * DB Core
@@ -243,7 +243,7 @@
 
 ## 06.15
 
-### Framework 개발 [주 업무] 
+### Framework 개발 [주 업무]
 
 * Phase Core
 * DB Core
@@ -268,7 +268,7 @@
 
 ## 06.16
 
-### Framework 개발 [주 업무] 
+### Framework 개발 [주 업무]
 
 * Phase Core
 * DB Core
@@ -283,4 +283,29 @@
 ### 오늘 한 것
 
 * Phase Merge
+* Phase History 재구현 완료, 다양한 테스트 케이스 확보 중
+
+
+
+
+
+<br/>
+
+## 06.17
+
+### Framework 개발 [주 업무]
+
+* Phase Core
+* DB Core
+
+### 문서화 하고 싶은 것
+
+* QA 문서화
+* Github 최신 기술
+* [Clean Code](/contents/BasicEducation/CleanCode.md)
+* STL 공부 & 정리
+
+### 오늘 한 것
+
+* 자잘한 버그들 수정
 * Phase History 재구현 완료, 다양한 테스트 케이스 확보 중
